chore: add dokploy setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     restart: always
@@ -8,7 +10,7 @@ services:
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "postgres"]
     volumes:
-      - ./postgres14:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     environment:
       - "POSTGRES_HOST_AUTH_METHOD=trust"
 
@@ -20,7 +22,7 @@ services:
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
     volumes:
-      - ./redis:/data
+      - redis_data:/data
 
   # es:
   #   restart: always
@@ -66,13 +68,13 @@ services:
       # prettier-ignore
       test: ['CMD-SHELL', 'wget -q --spider --proxy=off localhost:3000/health || exit 1']
     ports:
-      - "127.0.0.1:3000:3000"
+      - "3000:3000"
     depends_on:
       - db
       - redis
       # - es
     volumes:
-      - ./public/system:/mastodon/public/system
+      - public_system:/mastodon/public/system
 
   streaming:
     build: .
@@ -87,7 +89,7 @@ services:
       # prettier-ignore
       test: ['CMD-SHELL', 'wget -q --spider --proxy=off localhost:4000/api/v1/streaming/health || exit 1']
     ports:
-      - "127.0.0.1:4000:4000"
+      - "4000:4000"
     depends_on:
       - db
       - redis
@@ -105,7 +107,7 @@ services:
       - external_network
       - internal_network
     volumes:
-      - ./public/system:/mastodon/public/system
+      - public_system:/mastodon/public/system
     healthcheck:
       test: ["CMD-SHELL", "ps aux | grep '[s]idekiq 6' || false"]
 
@@ -130,3 +132,8 @@ networks:
   external_network:
   internal_network:
     internal: true
+
+volumes:
+  postgres_data:
+  redis_data:
+  public_system:
