--- a/.env.production.example
+++ b/.env.production.example
@@ -29,10 +29,18 @@ ES_PASS=YOUR_ELASTICSEARCH_PASSWORD
 
 # Secrets
 # -------
-# Make sure to use `docker-compose run --rm web bundle exec ruby -e "require 'securerandom'; puts SecureRandom.base64(64)"` to generate secrets
+# Make sure to use `docker-compose run --rm web bundle exec rake secret` to generate secrets
 # -------
 SECRET_KEY_BASE=GENERATE_WITH_RAKE_SECRET
 OTP_SECRET=GENERATE_WITH_RAKE_SECRET
+
+# Active Record Encryption
+# ------------------------
+# Generate with `docker-compose run --rm web bin/rails db:encryption:init`
+# ------------------------
+ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY=GENERATE_WITH_ENCRYPTION_INIT
+ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT=GENERATE_WITH_ENCRYPTION_INIT
+ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY=GENERATE_WITH_ENCRYPTION_INIT
 
 # Web Push
 # --------
