--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,6 +137,40 @@ services:
       - SINGLE_USER_MODE
       - REGISTRATIONS_MODE
 
+  admin:
+    image: ghcr.io/mastodon/mastodon:v4.4.2
+    restart: always
+    command: /bin/bash -c "while true; do sleep 3600; done"
+    networks:
+      - internal_network
+    depends_on:
+      - db
+      - redis
+    volumes:
+      - public_system:/mastodon/public/system
+    environment:
+      - LOCAL_DOMAIN
+      - WEB_DOMAIN
+      - RAILS_ENV
+      - NODE_ENV
+      - SECRET_KEY_BASE
+      - OTP_SECRET
+      - VAPID_PRIVATE_KEY
+      - VAPID_PUBLIC_KEY
+      - ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY
+      - ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT
+      - ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY
+      - DB_HOST
+      - DB_USER
+      - DB_NAME
+      - DB_PASS
+      - DB_PORT
+      - REDIS_HOST
+      - REDIS_PORT
+      - ES_ENABLED
+      - SINGLE_USER_MODE
+      - REGISTRATIONS_MODE
+
   sidekiq:
     image: ghcr.io/mastodon/mastodon:v4.4.2
     restart: always
